# jac-cs-hardware

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: sphinx.yml
docs/: conf.py  index.rst
src/jac_cs_hardware/: model.py
src/jac_cs_hardware/gpio/: aht20.py
